5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1582_1330.log
== SUBMITION (2019-03-12 17:13:41) 
-- CODE:
print(41,66)
-- EXECUTION TIME:
0.155375
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:13:54) 
-- CODE:
print(41,66)
-- EXECUTION TIME:
0.134616
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:13:59) 
-- CODE:
print(4166)
-- EXECUTION TIME:
0.178078
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
4166
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:14:02) 
-- CODE:
print(4166)
-- OUTPUT:
4166
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:14:05) 
-- CODE:
print(41,66)
-- OUTPUT:
41 66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:15:04) 
-- CODE:
print(round(41, 66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:15:07) 
-- CODE:
print(round(41, 66))
-- EXECUTION TIME:
0.130454
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:15:08) 
-- CODE:
print(round(41, 66))
-- EXECUTION TIME:
0.190655
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:15:11) 
-- CODE:
print(round(41 66))
-- ERROR:
File "XXXX", line 1
    print(round(41 66))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:15:16) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.100708
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:15:18) 
-- CODE:
print(round(41,66))
-- EXECUTION TIME:
0.121998
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:15:18) 
-- CODE:
print(round(41,66))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:16:03) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.171129
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:16:05) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:16:28) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.139835
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:16:30) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.146924
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:16:31) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.130169
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:16:32) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:16:33) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:16:43) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.171862
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:16:44) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:16:46) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.137049
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:00) 
-- CODE:
print(round(41.66)
-- EXECUTION TIME:
0.217329
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:17:00) 
-- CODE:
print(round(41.66)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:01) 
-- CODE:
print(round(41.66)
-- EXECUTION TIME:
0.164144
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:17:02) 
-- CODE:
print(round(41.66)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:17:05) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:07) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.205895
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:07) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.120016
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:07) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.0944259
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:08) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.117706
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:08) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.0854249
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:08) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.188651
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:08) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.16198
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:08) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.0969
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:08) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.106903
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:08) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.112938
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:08) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.09566
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:09) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.100922
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:09) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.114865
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:09) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.113007
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:09) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.107983
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:17:09) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.0873659
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:29) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.135428
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:30) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.142857
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:18:30) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:32) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.158414
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:32) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.140198
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:32) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.167027
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:33) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.147849
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:33) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.113002
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:33) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.115076
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:34) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.179881
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:34) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.107731
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:35) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.149398
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:35) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.0957808
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:35) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.13867
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:35) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.107371
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1582/1330/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:35) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.1667
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:36) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.102687
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:36) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.123418
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:36) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.124489
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:36) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.0994551
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:18:53) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:18:54) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:18:54) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:18:55) 
-- CODE:
print(41.66)
-- EXECUTION TIME:
0.167589
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:18:55) 
-- CODE:
print(41.66)
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:19:09) 
-- CODE:
print((41.66))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:19:10) 
-- CODE:
print((41.66))
-- EXECUTION TIME:
0.143603
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:19:17) 
-- CODE:
print( round(41.66))
-- EXECUTION TIME:
0.145847
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:19:18) 
-- CODE:
print( round(41.66))
-- EXECUTION TIME:
0.126877
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:19:19) 
-- CODE:
print( round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:19:20) 
-- CODE:
print( round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:19:22) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.139563
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:19:28) 
-- CODE:
print(round(41.65))
-- EXECUTION TIME:
0.126381
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:19:29) 
-- CODE:
print(round(41.65))
-- EXECUTION TIME:
0.15868
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:19:30) 
-- CODE:
print(round(41.65))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:19:34) 
-- CODE:
print(round(41.69))
-- EXECUTION TIME:
0.220769
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:19:36) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:20:03) 
-- CODE:
print(round(41.666666667))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:20:05) 
-- CODE:
print(round(41.666666667))
-- EXECUTION TIME:
0.190156
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:20:06) 
-- CODE:
print(round(41.666666667))
-- EXECUTION TIME:
0.142493
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:20:06) 
-- CODE:
print(round(41.666666667))
-- EXECUTION TIME:
0.136978
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:20:06) 
-- CODE:
print(round(41.666666667))
-- EXECUTION TIME:
0.0925369
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:20:06) 
-- CODE:
print(round(41.666666667))
-- EXECUTION TIME:
0.166554
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:20:06) 
-- CODE:
print(round(41.666666667))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:20:31) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:20:32) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.124974
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:20:32) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:20:44) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:22:40) 
-- CODE:
print(round(41.66))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:22:43) 
-- CODE:
print(round(41.66))
-- EXECUTION TIME:
0.130372
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:23:19) 
-- CODE:
print(round(41.655555555555, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:23:36) 
-- CODE:
print(round(41.655555555555, 2))
-- EXECUTION TIME:
0.135177
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:23:44) 
-- CODE:
print(round(41.655555, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:23:45) 
-- CODE:
print(round(41.655555, 2))
-- EXECUTION TIME:
0.148953
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:23:46) 
-- CODE:
print(round(41.655555, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:23:46) 
-- CODE:
print(round(41.655555, 2))
-- EXECUTION TIME:
0.107157
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:23:48) 
-- CODE:
print(round(41.655555, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:23:49) 
-- CODE:
print(round(41.655555, 2))
-- EXECUTION TIME:
0.126961
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:23:58) 
-- CODE:
print(round(41.655555, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:23:59) 
-- CODE:
print(round(41.655555, 2))
-- EXECUTION TIME:
0.13213
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:24:06) 
-- CODE:
print(round(41.655555, 1))
-- OUTPUT:
41.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:24:08) 
-- CODE:
print(round(41.655555, 1))
-- EXECUTION TIME:
0.168315
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:24:13) 
-- CODE:
print(round(41.655555, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:24:14) 
-- CODE:
print(round(41.655555, 2))
-- EXECUTION TIME:
0.145005
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:24:20) 
-- CODE:
print(round(41.65, 2))
-- OUTPUT:
41.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:24:21) 
-- CODE:
print(round(41.65, 2))
-- EXECUTION TIME:
0.146485
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:24:22) 
-- CODE:
print(round(41.65, 2))
-- OUTPUT:
41.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:24:26) 
-- CODE:
print(round(41.659, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:24:27) 
-- CODE:
print(round(41.659, 2))
-- EXECUTION TIME:
0.139325
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:24:27) 
-- CODE:
print(round(41.659, 2))
-- EXECUTION TIME:
0.140327
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:24:28) 
-- CODE:
print(round(41.659, 2))
-- EXECUTION TIME:
0.119861
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:24:28) 
-- CODE:
print(round(41.659, 2))
-- EXECUTION TIME:
0.182764
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:24:28) 
-- CODE:
print(round(41.659, 2))
-- EXECUTION TIME:
0.11219
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:25:00) 
-- CODE:
print(round(41.659, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:25:01) 
-- CODE:
print(round(41.659, 2))
-- EXECUTION TIME:
0.224038
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:25:01) 
-- CODE:
print(round(41.659, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:25:04) 
-- CODE:
print(round(41.659, 2))
-- EXECUTION TIME:
0.15584
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:25:04) 
-- CODE:
print(round(41.659, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:25:04) 
-- CODE:
print(round(41.659, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:25:05) 
-- CODE:
print(round(41.659, 2))
-- EXECUTION TIME:
0.24427
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:25:05) 
-- CODE:
print(round(41.659, 2))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:25:05) 
-- CODE:
print(round(41.659, 2))
-- EXECUTION TIME:
0.16208
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:26:41) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:26:46) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.164631
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:46:10) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.238751
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:28:56) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.135208
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:41:38) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.128971
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:59:24) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.142873
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:07:20) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.143042
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
